--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "pnpm -r --filter=./packages/** run build",
     "prod": "pnpm -r --filter=./packages/** run prod",
     "dev": "pnpm --parallel --filter=./** run dev",
-    "test": "pnpm -r --filter=./packages/** run test",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "type-check": "pnpm -r --filter=./packages/** run type-check",
     "lint": "pnpm biome lint .",
     "lint:fix": "pnpm biome lint --apply .",
@@ -17,7 +18,9 @@
   "devDependencies": {
     "@biomejs/biome": "^1.7.3",
     "@types/node": "^20.11.15",
+    "esbuild": "^0.21.3",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   }
 }
