--- a/.github/workflows/workflows/ci.yml
+++ b/.github/workflows/workflows/ci.yml
@@ -69,23 +69,23 @@ jobs:
       - name: Run format check
         run: npm run format
 
-  # unit-test:
-  #   name: Unit Test
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
+  unit-test:
+    name: Unit Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v2
-  #       with:
-  #         node-version: 22
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 22
 
-  #     - name: Setup pnpm
-  #       run: npm i -g pnpm
+      - name: Setup pnpm
+        run: npm i -g pnpm
 
-  #     - name: Install dependencies
-  #       run: pnpm i
+      - name: Install dependencies
+        run: pnpm i
 
-  #     - name: Run tests
-  #       run: npm run test
+      - name: Run tests
+        run: npm run test
