chore: update scripts and biome config

--- a/biome.json
+++ b/biome.json
@@ -7,6 +7,15 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true
-		}
-	}
+		},
+    "ignore": [
+      "dist"
+    ]
+	},
+  "formatter": {
+    "enabled": true,
+    "ignore": [
+      "dist"
+    ]
+  }
 }
