--- a/package.json
+++ b/package.json
@@ -19,12 +19,9 @@
     "@biomejs/biome": "^1.7.3",
     "@types/node": "^20.11.15",
     "esbuild": "^0.21.3",
-    "simple-git-hooks": "^2.11.1",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
   },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm run format:fix"
-  }
+  "packageManager": "pnpm@9.1.2+sha512.127dc83b9ea10c32be65d22a8efb4a65fb952e8fefbdfded39bdc3c97efc32d31b48b00420df2c1187ace28c921c902f0cb5a134a4d032b8b5295cbfa2c681e2"
 }
